--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "apollo-server-core": "^3.6.2",
     "apollo-server-express": "^3.6.2",
     "bcryptjs": "^2.4.3",
+    "class-validator": "^0.13.2",
     "express": "^4.17.2",
     "graphql": "^15.3.0",
     "pg": "^8.7.1",
