--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "apollo-server-express": "^3.6.2",
     "bcryptjs": "^2.4.3",
     "class-validator": "^0.13.2",
+    "cookie-parser": "^1.4.6",
+    "cross-env": "^7.0.3",
+    "dotenv": "^15.0.0",
     "express": "^4.17.2",
     "graphql": "^15.3.0",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^10.4.0",
@@ -20,10 +24,13 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.13",
     "@types/reflect-metadata": "^0.1.0"
   },
   "scripts": {
-    "start": "ts-node-dev ./src/index.ts"
+    "start": "cross-env NODE_ENV='development' ts-node-dev ./src/index.ts",
+    "build": "tsc",
+    "run": "node ./src/index.js"
   }
 }
