:recycle: refactor code to use custom prefixes
Refactor code to use custom prefixes.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,7 @@
     "paths": {
       "@resolvers/*": ["graphql/resolvers/*"],
       "@entities/*": ["entities/*"],
-      "@types/*": ["types/*"]
+      "@ctx/*": ["context/*"]
     }
   },
   "exclude": ["node_modules"],
