--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.13",
-    "@types/reflect-metadata": "^0.1.0"
+    "@types/reflect-metadata": "^0.1.0",
+    "tsconfig-paths": "^3.12.0"
   },
   "scripts": {
     "start": "cross-env NODE_ENV='development' ts-node-dev ./src/index.ts",
