--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "tsconfig-paths": "^3.12.0"
   },
   "scripts": {
-    "start": "cross-env NODE_ENV='development' ts-node-dev ./src/index.ts",
+    "start": "cross-env NODE_ENV='development' ts-node-dev -r tsconfig-paths/register ./src/index.ts",
     "build": "tsc",
     "run": "node ./src/index.js"
   }
