:passport_control: set up auth cookie for authorisation
Set up auth cookie to allow us to authorise users.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,8 @@
     "paths": {
       "@resolvers/*": ["graphql/resolvers/*"],
       "@entities/*": ["entities/*"],
-      "@ctx/*": ["context/*"]
+      "@ctx/*": ["context/*"],
+      "@auth/*": ["auth/*"]
     }
   },
   "exclude": ["node_modules"],
