--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bcryptjs": "^2.4.3",
     "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^15.0.0",
     "express": "^4.17.2",
@@ -24,6 +25,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/cookie-parser": "^1.4.2",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.13",
     "@types/reflect-metadata": "^0.1.0",
