--- a/package.json
+++ b/package.json
@@ -1,39 +1,41 @@
 {
-  "name": "todo-graphql",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
-  "dependencies": {
-    "apollo-server-core": "^3.6.2",
-    "apollo-server-express": "^3.6.2",
-    "bcryptjs": "^2.4.3",
-    "class-validator": "^0.13.2",
-    "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
-    "cross-env": "^7.0.3",
-    "dotenv": "^15.0.0",
-    "express": "^4.17.2",
-    "graphql": "^15.3.0",
-    "jsonwebtoken": "^8.5.1",
-    "pg": "^8.7.1",
-    "reflect-metadata": "^0.1.13",
-    "ts-node": "^10.4.0",
-    "ts-node-dev": "^1.1.8",
-    "type-graphql": "^1.1.1",
-    "typeorm": "^0.2.41",
-    "typescript": "^4.5.5"
-  },
-  "devDependencies": {
-    "@types/bcryptjs": "^2.4.2",
-    "@types/cookie-parser": "^1.4.2",
-    "@types/jsonwebtoken": "^8.5.8",
-    "@types/node": "^17.0.13",
-    "@types/reflect-metadata": "^0.1.0",
-    "tsconfig-paths": "^3.12.0"
-  },
-  "scripts": {
-    "start": "cross-env NODE_ENV='development' ts-node-dev -r tsconfig-paths/register ./src/index.ts",
-    "build": "tsc",
-    "run": "node ./src/index.js"
-  }
+	"name": "todo-graphql",
+	"version": "1.0.0",
+	"main": "index.js",
+	"license": "MIT",
+	"dependencies": {
+		"apollo-server-core": "^3.6.2",
+		"apollo-server-express": "^3.6.2",
+		"bcryptjs": "^2.4.3",
+		"class-validator": "^0.13.2",
+		"cookie-parser": "^1.4.6",
+		"cors": "^2.8.5",
+		"cross-env": "^7.0.3",
+		"dotenv": "^15.0.0",
+		"express": "^4.17.2",
+		"graphql": "^15.3.0",
+		"jsonwebtoken": "^8.5.1",
+		"pg": "^8.7.1",
+		"reflect-metadata": "^0.1.13",
+		"ts-node": "^10.4.0",
+		"ts-node-dev": "^1.1.8",
+		"type-graphql": "^1.1.1",
+		"typeorm": "^0.2.41",
+		"typescript": "^4.5.5"
+	},
+	"devDependencies": {
+		"@types/bcryptjs": "^2.4.2",
+		"@types/cookie-parser": "^1.4.2",
+		"@types/jsonwebtoken": "^8.5.8",
+		"@types/node": "^17.0.13",
+		"@types/reflect-metadata": "^0.1.0",
+		"prettier": "^2.5.1",
+		"tsconfig-paths": "^3.12.0"
+	},
+	"scripts": {
+		"start": "cross-env NODE_ENV='development' ts-node-dev -r tsconfig-paths/register ./src/index.ts",
+		"build": "tsc",
+		"run": "node ./src/index.js",
+		"lint": "prettier --write ./src/*"
+	}
 }
